--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="/favicon.ico">
-    <title>Andreas Merten - DevOps, Platform Test Engineer</title>
+    <title>Andreas Merten - DevOps, Test Engineer</title>
   </head>
   <body>
     <noscript>
