--- a/public/images/flow.html
+++ b/public/images/flow.html
@@ -20,20 +20,23 @@
       font-family: "Segoe UI", system-ui, -apple-system, sans-serif;
       background: radial-gradient(circle at 20% 20%, rgba(56,189,248,0.08), transparent 32%), radial-gradient(circle at 80% 10%, rgba(34,197,94,0.08), transparent 28%), var(--bg);
       color: var(--text);
-      padding: 16px;
+      padding: 12px;
     }
     .shell { max-width: 1400px; margin: 0 auto; display: flex; flex-direction: column; gap: 14px; }
     header h1 { margin: 0; font-size: 26px; }
     header p { margin: 0; color: var(--muted); font-size: 14px; }
-    .row { display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 14px; }
+    .row { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 14px; }
     .panel {
       position: relative;
-      overflow: hidden;
+      overflow: visible;
       background: linear-gradient(135deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
       border: 1px solid var(--panel-border);
       border-radius: 14px;
-      padding: 10px;
+      padding: 12px;
       box-shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
     .panel::before {
       content: "";
@@ -44,7 +47,7 @@
       z-index: 0;
     }
     .panel > * { position: relative; z-index: 1; }
-    svg { width: 100%; height: auto; display: block; }
+    svg.chart { width: 100%; height: 340px; display: block; background: rgba(15,23,42,0.9); border-radius: 10px; }
     .node { fill: #0a1224; stroke: #1f2937; stroke-width: 2; rx: 12; filter: drop-shadow(0 10px 18px rgba(0,0,0,0.28)); }
     .node.ingress { stroke: var(--accent-a); }
     .node.gateway { stroke: var(--accent-b); }
@@ -57,9 +60,21 @@
     .marker text { fill: var(--text); font-weight: 700; font-size: 11px; text-anchor: middle; dominant-baseline: middle; }
     .steps { background: rgba(255,255,255,0.04); border: 1px solid var(--panel-border); border-radius: 12px; padding: 12px 14px; display: grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap: 8px; }
     .steps strong { color: var(--text); }
-    .chart-steps { margin-top: 10px; background: rgba(255,255,255,0.03); border: 1px dashed var(--panel-border); border-radius: 10px; padding: 10px 12px; font-size: 13px; color: var(--text); }
+    .chart-steps { background: rgba(255,255,255,0.03); border: 1px dashed var(--panel-border); border-radius: 10px; padding: 10px 12px; font-size: 13px; color: var(--text); }
     .chart-steps div { margin-bottom: 4px; }
     .chart-steps div:last-child { margin-bottom: 0; }
+    @media (max-width: 900px) {
+      .row { grid-template-columns: 1fr; }
+      header h1 { font-size: 22px; }
+      header p { font-size: 13px; }
+      .panel { padding: 12px; }
+      .chart-steps { font-size: 14px; }
+    }
+    @media (max-width: 600px) {
+      svg.chart { height: 320px; }
+      .panel { padding: 12px; }
+      .shell { gap: 12px; }
+    }
   </style>
 </head>
 <body>
@@ -72,7 +87,7 @@
     <div class="row">
       <section class="panel">
         <h3 style="margin:0 0 6px; color: var(--text);">Before: Ingress-NGINX</h3>
-        <svg viewBox="0 0 920 320" xmlns="http://www.w3.org/2000/svg">
+        <svg class="chart" viewBox="0 0 920 320" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <marker id="arrow" markerWidth="12" markerHeight="12" refX="10" refY="6" orient="auto">
               <path d="M0 0 L12 6 L0 12 Z" fill="currentColor"/>
@@ -133,7 +148,7 @@
 
       <section class="panel">
         <h3 style="margin:0 0 6px; color: var(--text);">Now: Gateway API + NGINX Gateway Fabric</h3>
-        <svg viewBox="0 0 920 320" xmlns="http://www.w3.org/2000/svg">
+        <svg class="chart" viewBox="0 0 920 320" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <marker id="arrow-g" markerWidth="12" markerHeight="12" refX="10" refY="6" orient="auto">
               <path d="M0 0 L12 6 L0 12 Z" fill="currentColor"/>
