--- a/public/images/flow2.html
+++ b/public/images/flow2.html
@@ -1,106 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Kubernetes Traffic Flow – Ingress vs Gateway API</title>
-<style>
-body {
-  background:#0b1020;
-  color:white;
-  font-family: system-ui, sans-serif;
-  margin: 0;
-  padding: 16px;
-}
+  <meta charset="UTF-8">
+  <title>Kubernetes Traffic Flow – Ingress vs Gateway API</title>
+  <style>
+    body {
+      background: #0b1020;
+      color: white;
+      font-family: system-ui, sans-serif;
+      margin: 0;
+      padding: 16px;
+    }
 
-.container { max-width: 1200px; margin: 0 auto; display: flex; flex-direction: column; gap: 12px; }
-svg { width: 100%; height: 580px; }
-.box { rx: 10; ry: 10; stroke-width: 2; }
-.public { fill:#1f2937; stroke:#60a5fa; }
-.dns { fill:#312e81; stroke:#818cf8; }
-.lb { fill:#065f46; stroke:#34d399; }
-.ingress { fill:#7c2d12; stroke:#fb923c; }
-.gateway { fill:#3b0764; stroke:#c084fc; }
-.service { fill:#1e3a8a; stroke:#60a5fa; }
-.pod { fill:#022c22; stroke:#34d399; }
-.cluster { fill: none; stroke: #22d3ee; stroke-dasharray: 10 6; stroke-width: 3; }
-.arrow { stroke: #facc15; stroke-width: 3; fill: none; stroke-dasharray: 10 8; animation: flow 1.5s linear infinite; }
-@keyframes flow { from { stroke-dashoffset: 0; } to { stroke-dashoffset: -36; } }
-text { fill: #e5e7eb; font-size: 14px; text-anchor: middle; dominant-baseline: middle; pointer-events: none; }
-.title { font-size: 20px; fill:#38bdf8; }
-.subtitle { font-size: 13px; font-weight: 600; fill:#e5e7eb; }
-.lb-text { font-size: 15px; font-weight: 600; fill: #f8fafc; }
-.steps-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 12px; }
-.steps-grid h3 { margin: 0 0 6px; font-size: 15px; color: #e5e7eb; }
-.steps-grid ul { margin: 0; padding-left: 18px; display: flex; flex-direction: column; gap: 6px; color: #cbd5e1; font-size: 13px; }
-.section-title { margin: 0 0 8px; font-size: 15px; color: #e5e7eb; }
-</style>
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    svg {
+      width: 100%;
+      height: 580px;
+    }
+
+    .box {
+      rx: 10;
+      ry: 10;
+      stroke-width: 2;
+    }
+
+    .public {
+      fill: #1f2937;
+      stroke: #60a5fa;
+    }
+
+    .dns {
+      fill: #312e81;
+      stroke: #818cf8;
+    }
+
+    .lb {
+      fill: #065f46;
+      stroke: #34d399;
+    }
+
+    .ingress {
+      fill: #7c2d12;
+      stroke: #fb923c;
+    }
+
+    .gateway {
+      fill: #3b0764;
+      stroke: #c084fc;
+    }
+
+    .service {
+      fill: #1e3a8a;
+      stroke: #60a5fa;
+    }
+
+    .pod {
+      fill: #022c22;
+      stroke: #34d399;
+    }
+
+    .cluster {
+      fill: none;
+      stroke: #22d3ee;
+      stroke-dasharray: 10 6;
+      stroke-width: 3;
+    }
+
+    .arrow {
+      stroke: #facc15;
+      stroke-width: 3;
+      fill: none;
+      stroke-dasharray: 10 8;
+      animation: flow 1.5s linear infinite;
+    }
+
+    @keyframes flow {
+      from {
+        stroke-dashoffset: 0;
+      }
+
+      to {
+        stroke-dashoffset: -36;
+      }
+    }
+
+    text {
+      fill: #e5e7eb;
+      font-size: 14px;
+      text-anchor: middle;
+      dominant-baseline: middle;
+      pointer-events: none;
+    }
+
+    .title {
+      font-size: 20px;
+      fill: #38bdf8;
+    }
+
+    .subtitle {
+      font-size: 13px;
+      font-weight: 600;
+      fill: #e5e7eb;
+    }
+
+    .lb-text {
+      font-size: 15px;
+      font-weight: 600;
+      fill: #f8fafc;
+    }
+
+    .steps-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 12px;
+    }
+
+    .steps-grid h3 {
+      margin: 0 0 6px;
+      font-size: 15px;
+      color: #e5e7eb;
+    }
+
+    .steps-grid ul {
+      margin: 0;
+      padding-left: 18px;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      color: #cbd5e1;
+      font-size: 13px;
+    }
+
+    .section-title {
+      margin: 0 0 8px;
+      font-size: 15px;
+      color: #e5e7eb;
+    }
+  </style>
 </head>
-<body>
-<div class="container">
-<svg viewBox="0 0 1400 700">
-  <text x="350" y="650" class="title">Ingress-NGINX Flow</text>
-  <text x="1050" y="650" class="title">Gateway API Flow</text>
-  <rect x="150" y="300" width="500" height="300" class="cluster"/>
-  <text x="400" y="285" class="subtitle"></text>
-  <rect x="750" y="300" width="500" height="300" class="cluster"/>
-  <text x="1000" y="285" class="subtitle"></text>
-  <rect x="600" y="100" width="200" height="60" class="box public"/>
-  <text x="700" y="130">🌍 End User</text>
-  <rect x="600" y="180" width="200" height="60" class="box dns"/>
-  <text x="700" y="210">📡 DNS</text>
-  <rect x="200" y="240" width="200" height="60" class="box lb"/>
-  <text x="300" y="280" class="lb-text">☁ Load Balancer</text>
-  <rect x="200" y="330" width="200" height="60" class="box ingress"/>
-  <text x="300" y="360">🌀 Ingress-NGINX</text>
-  <rect x="200" y="420" width="200" height="60" class="box service"/>
-  <text x="300" y="450">🔀 Service</text>
-  <rect x="200" y="510" width="200" height="60" class="box pod"/>
-  <text x="300" y="540">📦 Pod</text>
-  <rect x="900" y="240" width="200" height="60" class="box lb"/>
-  <text x="1000" y="280" class="lb-text">☁ Load Balancer</text>
-  <rect x="900" y="330" width="200" height="60" class="box gateway"/>
-  <text x="1000" y="360">🚪 Gateway API</text>
-  <rect x="900" y="420" width="200" height="60" class="box service"/>
-  <text x="1000" y="450">🔀 Service</text>
-  <rect x="900" y="510" width="200" height="60" class="box pod"/>
-  <text x="1000" y="540">📦 Pod</text>
-  <line x1="700" y1="160" x2="700" y2="180" class="arrow"/>
-  <line x1="600" y1="210" x2="400" y2="270" class="arrow"/>
-  <line x1="800" y1="210" x2="900" y2="270" class="arrow"/>
-  <line x1="300" y1="300" x2="300" y2="330" class="arrow"/>
-  <line x1="300" y1="390" x2="300" y2="420" class="arrow"/>
-  <line x1="300" y1="480" x2="300" y2="510" class="arrow"/>
-  <line x1="1000" y1="300" x2="1000" y2="330" class="arrow"/>
-  <line x1="1000" y1="390" x2="1000" y2="420" class="arrow"/>
-  <line x1="1000" y1="480" x2="1000" y2="510" class="arrow"/>
-</svg>
 
-<div class="steps-grid">
-  <div>
-    <h3>Ingress-NGINX Steps</h3>
-    <ul>
-      <li>User hits DNS.</li>
-      <li>DNS resolves to the public entry.</li>
-      <li>Load Balancer forwards traffic to Ingress-NGINX.</li>
-      <li>Ingress-NGINX terminates TLS.</li>
-      <li>Ingress rules pick the Service.</li>
-      <li>Service load-balances to Pods.</li>
-      <li>Pods serve the request.</li>
-    </ul>
+<body>
+  <div class="container">
+    <svg viewBox="0 0 1400 700">
+      <text x="350" y="650" class="title">Ingress-NGINX Flow</text>
+      <text x="1050" y="650" class="title">Gateway API Flow</text>
+      <rect x="150" y="300" width="500" height="300" class="cluster" />
+      <text x="400" y="285" class="subtitle"></text>
+      <rect x="750" y="300" width="500" height="300" class="cluster" />
+      <text x="1000" y="285" class="subtitle"></text>
+      <rect x="600" y="100" width="200" height="60" class="box public" />
+      <text x="700" y="130">🌍 End User</text>
+      <rect x="600" y="180" width="200" height="60" class="box dns" />
+      <text x="700" y="210">📡 DNS</text>
+      <rect x="200" y="240" width="200" height="60" class="box lb" />
+      <text x="300" y="280" class="lb-text">☁ Load Balancer</text>
+      <rect x="200" y="330" width="200" height="60" class="box ingress" />
+      <text x="300" y="360">🌀 Ingress-NGINX</text>
+      <rect x="200" y="420" width="200" height="60" class="box service" />
+      <text x="300" y="450">🔀 Service</text>
+      <rect x="200" y="510" width="200" height="60" class="box pod" />
+      <text x="300" y="540">📦 Pod</text>
+      <rect x="900" y="240" width="200" height="60" class="box lb" />
+      <text x="1000" y="280" class="lb-text">☁ Load Balancer</text>
+      <rect x="900" y="330" width="200" height="60" class="box gateway" />
+      <text x="1000" y="360">🚪 Gateway API</text>
+      <rect x="900" y="420" width="200" height="60" class="box service" />
+      <text x="1000" y="450">🔀 Service</text>
+      <rect x="900" y="510" width="200" height="60" class="box pod" />
+      <text x="1000" y="540">📦 Pod</text>
+      <line x1="700" y1="160" x2="700" y2="180" class="arrow" />
+      <line x1="600" y1="210" x2="400" y2="270" class="arrow" />
+      <line x1="800" y1="210" x2="900" y2="270" class="arrow" />
+      <line x1="300" y1="300" x2="300" y2="330" class="arrow" />
+      <line x1="300" y1="390" x2="300" y2="420" class="arrow" />
+      <line x1="300" y1="480" x2="300" y2="510" class="arrow" />
+      <line x1="1000" y1="300" x2="1000" y2="330" class="arrow" />
+      <line x1="1000" y1="390" x2="1000" y2="420" class="arrow" />
+      <line x1="1000" y1="480" x2="1000" y2="510" class="arrow" />
+    </svg>
+
+    <div class="steps-grid">
+      <div>
+        <h3>Ingress-NGINX Flow</h3>
+        <ul>
+          <li>User hits DNS.</li>
+          <li>DNS resolves to the public entry.</li>
+          <li>Load Balancer forwards traffic to Ingress-NGINX.</li>
+          <li>Ingress-NGINX terminates TLS.</li>
+          <li>Ingress rules pick the Service.</li>
+          <li>Service load-balances to Pods.</li>
+          <li>Pods serve the request.</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Gateway API Flow</h3>
+        <ul>
+          <li>User hits DNS.</li>
+          <li>DNS resolves to the public entry.</li>
+          <li>Load Balancer forwards to NGF gateway.</li>
+          <li>Gateway API (nginx-gateway) terminates TLS.</li>
+          <li>HTTPRoutes decide the Service.</li>
+          <li>Service fans out to Pods.</li>
+          <li>Pods serve the request.</li>
+        </ul>
+      </div>
+    </div>
   </div>
-  <div>
-    <h3>Gateway API Steps</h3>
-    <ul>
-      <li>User hits DNS.</li>
-      <li>DNS resolves to the public entry.</li>
-      <li>Load Balancer forwards to NGF gateway.</li>
-      <li>Gateway API (nginx-gateway) terminates TLS.</li>
-      <li>HTTPRoutes decide the Service.</li>
-      <li>Service fans out to Pods.</li>
-      <li>Pods serve the request.</li>
-    </ul>
-  </div>
-</div>
-</div>
 </body>
+
 </html>
